crates/swc_ecma_parser/tests/test262-error-references/fail/b02cbe75ce1ceb06.js.stderr
error: Rest element must be final element
 --> $DIR/tests/test262-parser/fail/b02cbe75ce1ceb06.js:1:2
  |
1 | [...0,{a=0}]=0
  |  ^^^^

